chore: add build before running

--- a/packages/remixapp/.stackblitzrc
+++ b/packages/remixapp/.stackblitzrc
@@ -1,4 +1,4 @@
 {
-  "publisherStartCommand": "yarn dev",
+  "publisherStartCommand": "yarn lerna run build && yarn dev",
   "startCommand": "yarn build"
 }
