--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,8 +1,7 @@
 {
   "name": "footer",
   "version": "0.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src",
   "scripts": {
     "build": "rimraf dist && rollup --config",
     "test": "jest"
@@ -18,7 +17,9 @@
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "footer": "*",
+    "header": "*"
   },
   "devDependencies": {
     "rimraf": "^3.0.2"
