--- a/packages/nextapp/package.json
+++ b/packages/nextapp/package.json
@@ -13,5 +13,8 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "stackblitzrc": {
+    "startCommand": "yarn dev"
   }
 }
